fix vue placeholder integration

--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/integrations/Styleguide-VueUsage-Sitecore-Placeholder.astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/integrations/Styleguide-VueUsage-Sitecore-Placeholder.astro
@@ -1,6 +1,6 @@
 ---
 import StyleguideSpecimen from "../styleguide/Styleguide-Specimen.astro";
-import { Placeholder } from "@sitecore-jss/sitecore-jss-react";
+import Placeholder from '../system/Placeholder.astro';
 import ComponentFactory from "./vue/componentFactory";
 
 ---
@@ -9,7 +9,7 @@ import ComponentFactory from "./vue/componentFactory";
   e2eId="styleguide-fieldusage-text"
 >
   <Placeholder
-    name="react"
+    name="vue"
     rendering={Astro.props.route}
     componentFactory={ComponentFactory}
   />
