Use the right placeholder component

--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/integrations/Styleguide-ReactUsage-Sitecore-Placeholder.astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/integrations/Styleguide-ReactUsage-Sitecore-Placeholder.astro
@@ -1,6 +1,6 @@
 ---
 import StyleguideSpecimen from "../styleguide/Styleguide-Specimen.astro";
-import Placeholder from '../system/Placeholder.astro';
+import { Placeholder } from '@sitecore-jss/sitecore-jss-react';
 import ComponentFactory from "./react/ComponentFactory";
 
 ---
