--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/integrations/Styleguide-VueUsage-Sitecore.astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/integrations/Styleguide-VueUsage-Sitecore.astro
@@ -1,6 +1,6 @@
 ---
-import StyleguideSpecimen from "../styleguide/Styleguide-Specimen.astro";
-import ContentBlock from "./vue/ContentBlock.vue";
+import StyleguideSpecimen from '../styleguide/Styleguide-Specimen.astro';
+import ContentBlock from './vue/ContentBlock.vue';
 ---
 
 <StyleguideSpecimen
