--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/integrations/Styleguide-VueUsage-Simple.astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/integrations/Styleguide-VueUsage-Simple.astro
@@ -3,6 +3,9 @@ import StyleguideSpecimen from '../styleguide/Styleguide-Specimen.astro';
 import Counter from './vue/Counter.vue';
 ---
 
-<StyleguideSpecimen route={Astro.props.route} e2eId="styleguide-integration-vue-simple">
-  <Counter client:load/>
+<StyleguideSpecimen
+  route={Astro.props.route}
+  e2eId="styleguide-integration-vue-simple"
+>
+  <Counter client:load />
 </StyleguideSpecimen>
