--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/fields/Styleguide-FieldUsage-AstroImage.astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/fields/Styleguide-FieldUsage-AstroImage.astro
@@ -14,17 +14,10 @@ const { route } = Astro.props;
   <AstroImage field={route.fields.sample1} height={51} width={204} />
 
   <p>Advanced image</p>
-  <!--
-    You can use any of the props available in the astrojs/image.
-    E.g. we have used 'aspectRatio' to demonstrate how an image size could be calculated based on one dimension only(height) and an aspect ratio .
-    imageParams: parameters that are passed to Sitecore to perform server-side resizing of the image
-        Sample rescales image to max 100x50 dimensions on the server
-        IMPORTANT: imageParams must be whitelisted for resizing to occur. See /sitecore/config/*.config (search for 'allowedMediaParams')
-    other-attributes-pass-through
-  -->
   <AstroImage
     field={route.fields.sample2}
     height={50}
+    width={100}
     imageParams={{ mw: 100, mh: 50 }}
     aspectRatio={4 / 2}
     data-sample="other-attributes-pass-through"
