--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/pages/[...path].astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/pages/[...path].astro
@@ -7,6 +7,7 @@ import type { LayoutServiceContext, RouteData } from '@sitecore-jss/sitecore-jss
 import config from "../temp/config";
 import GraphQLRequestClientFactory from "../lib/graphql/graphql-request-client-factory";
 import React from 'react';
+import { HelloComponent } from './hello.component';
 
 export const prerender = true;
 
@@ -36,4 +37,7 @@ SitecoreContextMap.setKey('scContext', scContext);
 SitecoreContextMap.setKey('dictionary', pageProps.dictionary);
 
 ---
-<JssLayout title="a" layoutData={pageProps.layoutData} />
+<div>
+    <HelloComponent />
+    <JssLayout title="a" layoutData={pageProps.layoutData} />
+</div>
