--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/integrations/Styleguide-ReactUsage-Sitecore-Placeholder.astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/integrations/Styleguide-ReactUsage-Sitecore-Placeholder.astro
@@ -1,7 +1,7 @@
 ---
 import StyleguideSpecimen from "../styleguide/Styleguide-Specimen.astro";
 import { Placeholder } from '@sitecore-jss/sitecore-jss-react';
-import ComponentFactory from "./react/ComponentFactory";
+import ComponentFactory from "./react/componentFactory";
 
 ---
 <StyleguideSpecimen
