--- a/astro-sitecore-jss/packages/astro-sitecore-jss/src/components/RichText.astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss/src/components/RichText.astro
@@ -1,22 +1,20 @@
 ---
-export interface Props   {
-    /** The text field data. */
-  field: {
-    value?: string | number,
-    editable?: string,
-    required?: true
-  },
-      /**
-     * The HTML element that will wrap the contents of the field.
-     */
-  tag?: string,
-    /**
-     * Can be used to explicitly disable inline editing.
-     * If true and `field.editable` has a value, then `field.editable` will
-     * be processed and rendered as component output. If false, `field.editable` value will be ignored and not rendered.
-     */
-  editable?: boolean
-  class?:string
+import { EditableFieldProps } from './sharedTypes';
+
+export interface RichTextField {
+  value?: string;
+  editable?: string;
+  required?: true;
+}
+
+export interface Props extends EditableFieldProps {
+  [htmlAttributes: string]: unknown;
+  /** The text field data. */
+  field: RichTextField;
+  /**
+  * The HTML element that will wrap the contents of the field.
+  */
+  tag?: string;
 }
 
 const { field, tag = "div", editable = true} = Astro.props;
