--- a/astro-sitecore-jss/packages/astro-sitecore-jss/src/components/Image.astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss/src/components/Image.astro
@@ -1,11 +1,23 @@
 ---
 import type { HTMLAttributes } from "astro/types";
 import { prepareImageSource } from "../media/image-api";
-import type { ImageField } from "./ImageField";
 
+export interface ImageFieldValue {
+  [attributeName: string]: unknown;
+  src?: string;
+  alt?: string;
+  height?: string;
+  width?: string;
+}
+
+export interface ImageField {
+  value?: ImageFieldValue;
+  editable?: string;
+  mediaUrlPrefix?: RegExp;
+}
 
 export interface Props extends Omit<HTMLAttributes<"img">, "src"> {
-  [attributeName: string]: any;
+  [htmlAttributes: string]: unknown;
   field: ImageField;
   src?: string | null;
   imageParams?: { [paramName: string]: string | number };
