--- a/astro-sitecore-jss/packages/astro-sitecore-jss/src/components/Text.astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss/src/components/Text.astro
@@ -1,26 +1,24 @@
 ---
-export interface Props   {
-    /** The text field data. */
-  field: {
-    value?: string | number,
-    editable?: string,
-    required?: true
-  },
-      /**
-     * The HTML element that will wrap the contents of the field.
-     */
-  tag?: string,
-    /**
-     * Can be used to explicitly disable inline editing.
-     * If true and `field.editable` has a value, then `field.editable` will
-     * be processed and rendered as component output. If false, `field.editable` value will be ignored and not rendered.
-     */
-  editable?: boolean,
-    /**
-     * If false, HTML-encoding of the field value is disabled and the value is rendered as-is.
-     */
-  encode?: boolean,
-  class?: string,
+import { EditableFieldProps } from './sharedTypes';
+
+export interface TextField {
+  value?: string | number;
+  editable?: string;
+  required?: true;
+}
+
+export interface Props extends EditableFieldProps {
+  [htmlAttributes: string]: unknown;
+  /** The text field data. */
+  field: TextField;
+  /**
+  * The HTML element that will wrap the contents of the field.
+  */
+  tag?: string;
+  /**
+   * If false, HTML-encoding of the field value is disabled and the value is rendered as-is.
+   */
+  encode?: boolean;
 }
 
 const { field, tag = "span", editable = true, encode = true} = Astro.props;
