--- a/astro-sitecore-jss/packages/astro-sitecore-jss/src/components/Link.astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss/src/components/Link.astro
@@ -2,7 +2,7 @@
 import { EditableFieldProps } from './sharedTypes';
 
 export interface LinkFieldValue {
-  [htmlAttributes: string]: unknown;
+  [attributeName: string]: unknown;
   href?: string;
   title?: string;
   target?: string;
