--- a/astro-sitecore-jss/packages/astro-sitecore-jss/src/components/File.astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss/src/components/File.astro
@@ -1,6 +1,6 @@
 ---
 export interface FileFieldValue {
-  [propName: string]: unknown;
+  [attributeName: string]: unknown;
   src?: string;
   title?: string;
   displayName?: string;
