--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/system/Placeholder.astro
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/src/components/system/Placeholder.astro
@@ -76,7 +76,7 @@ const componentsExtended =
   components &&
   components.map((component) => {
     if (component.params) {
-      component.params.styles = `${component.params?.GridParameters || ''} ${component.params?.Styles || ''}`;
+      component.params.styles = `${component.params?.GridParameters || ''} ${component.params?.Styles || ''}`.trim();
     }
 
     const componentProps = {
